--- a/app/src/main/res/layout/fragment_detay.xml
+++ b/app/src/main/res/layout/fragment_detay.xml
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kelimeAnlami" />
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/title_image"
         android:layout_width="146dp"
         android:layout_height="190dp"
@@ -46,7 +46,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"/>
+
 
     <TextView
         android:id="@+id/kelime"
@@ -94,6 +96,5 @@
         app:layout_constraintStart_toEndOf="@+id/cumle"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/learned" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
