--- a/app/src/main/res/layout/fragment_detay.xml
+++ b/app/src/main/res/layout/fragment_detay.xml
@@ -3,23 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/kareekran">
 
 
     <TextView
         android:id="@+id/cumle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="211dp"
+        android:background="@color/white"
         android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintHorizontal_bias="0.297"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kelimeAnlami" />
 
-    <com.airbnb.lottie.LottieAnimationView
+    <ImageView
         android:id="@+id/title_image"
         android:layout_width="146dp"
         android:layout_height="190dp"
@@ -30,17 +35,19 @@
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_autoPlay="true"/>
+        app:lottie_autoPlay="true" />
 
 
     <TextView
         android:id="@+id/kelime"
-        android:layout_width="122dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="68dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="390dp"
         android:layout_marginBottom="31dp"
+        android:background="@color/white"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/kelimeAnlami"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,8 +56,11 @@
         android:id="@+id/kelimeAnlami"
         android:layout_width="132dp"
         android:layout_height="0dp"
+        android:layout_marginStart="28dp"
         android:layout_marginBottom="29dp"
+        android:background="@color/white"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/cumle"
         app:layout_constraintStart_toStartOf="@+id/kelime"
         app:layout_constraintTop_toBottomOf="@+id/kelime" />
@@ -60,23 +70,23 @@
         android:layout_width="61dp"
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="398dp"
         android:background="#161515"
         app:layout_constraintBottom_toTopOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="117dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="181dp"
+        android:layout_width="80dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="125dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cumle"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/learned" />
 </androidx.constraintlayout.widget.ConstraintLayout>
