--- a/app/src/main/res/layout/itemview.xml
+++ b/app/src/main/res/layout/itemview.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-   >
+    android:background="#73C5CE"
+    app:cardBackgroundColor="#75B7BD">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#CA5C5C"
+        android:background="#1F7C24"
         android:padding="25dp">
 
         <TextView
