Implemented title handling in DetayFragment and integrated learned words display in LearnedFragment
- Added title support to DetayFragment, ensuring that titles are displayed correctly along with word details.
- Updated the layout and UI binding in DetayFragment to accommodate the title alongside other word information.
- Integrated functionality in LearnedFragment to dynamically display words that have been marked as learned.
- Improved data handling between fragments to ensure seamless navigation and display of word details and learned words.

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -30,7 +30,11 @@
         android:id="@+id/learnedFragment"
         android:name="com.example.pictureenglishcards.ui.learned.LearnedFragment"
         android:label="fragment_learned"
-        tools:layout="@layout/fragment_learned" />
+        tools:layout="@layout/fragment_learned" >
+        <action
+            android:id="@+id/action_learnedFragment_to_detayFragment"
+            app:destination="@id/detayFragment" />
+    </fragment>
     <fragment
         tools:layout="@layout/fragment_detay"
         android:id="@+id/detayFragment"
